# flosh

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/waybar/: flosh-ocr.json  flosh-paste.json  flosh-shot.json  flosh-target.json  modules.json
packaging/arch/: .SRCINFO  PKGBUILD  README.md
packaging/arch-git/: .SRCINFO  PKGBUILD  README.md
src/flosh/: __init__.py  capture.py  cli.py  config.py  ocr.py  paste.py  paths.py  picker.py  state.py
